syntax = "proto3";
package user;
option go_package = "./;userpb";

service UserService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}

message LoginRequest {
    string code = 1;
}

message LoginResponse {
    string access_token = 1;
    int32 expires_in    = 2;
    int32 user_id       = 3;
}

message CheckTokenRequest {
    string access_token = 1;
}

message CheckTokenResponse {
    int32 user_id = 1;
}